# serialize

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGES  LICENSE  MANIFEST.in  README  README.md  README.rst  conftest.py  pyproject.toml  requirements.full.txt  requirements.test.txt  requirements.txt  setup.cfg  setup.py  supported_pkgs.txt
.github/workflows/: ci.yml  lint-autoupdate.yml
serialize/: __init__.py  all.py  bson.py  dill.py  json.py  msgpack.py  phpserialize.py  pickle.py  serpent.py  simplejson.py  version.py  yaml.py  yaml_legacy.py
serialize/testsuite/: __init__.py  test_basic.py
