[metadata]
name = Serialize
version = 0.2.dev0
author = Hernan E. Grecco
author_email = hernan.grecco@gmail.com
license = BSD
description = A common API for multiple serialization formats with support for custom classes
long_description = file: README.rst
keywords = serialization, deserialization, packing, unpacking
url = https://github.com/hgrecco/serialize
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules= serialize
zip_safe = True
include_package_data = True
python_requires = >=3.6

setup_requires =
    setuptools
    setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-cov

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]

[flake8]
ignore=
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    build

[tool:pytest]
addopts = --pyargs

[isort]
default_section=THIRDPARTY
known_first_party=serialize
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
